<resources>
    <string name="app_name" translatable="false">NearMe</string>

    <!--Misc texts-->
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Don\’t have an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="divider_or">OR</string>
    <string name="title_activity_settings">Settings</string>
    <string name="signup_btn_label">Signup</string>
    <string name="signup_title">Sign up</string>
    <!--Welcome messages-->
    <string name="splash_welcome_txt">Easiest way to\nfind the best product</string>
    <string name="login_welcome_txt">Hello there !\nWelcome Back</string>
    <string name="signup_welcome_txt">Hello there !\nWelcome to you</string>
    <string name="title_activity_maps">Map</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code_subtext">Please type the otp which send to you earlier</string>
    <string name="next">अगला</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="hospitals">Hospitals</string>
    <string name="schools">Schools</string>
    <string name="restautants">Restautants</string>
    <string name="atm">ATM</string>
    <string name="find_nearby_places">Find NearBy Places</string>
    <string name="check_locations">Check Locations</string>
    <string name="make_a_move">Make a Move</string>
    <string name="go_for_dine">Go For Dine</string>
    <string name="explore_now">Explore Now...</string>
    <string name="description1">There is something particularly fascinating about seeing places you know in a piece of art - be that in a film, or a photograph, or a painting.</string>
    <string name="description2">The world is a book and those who do not travel read only one page.</string>
    <string name="description3">The dinner hour is a sacred, happy time when everyone should be together and relaxed.</string>
    <string name="description4">THE PURPOSE OF LIFE IS TO LIVE IT, TO TASTE IT, TO EXPERIENCE TO THE UTMOST, TO REACH OUT EAGERLY AND WITHOUT FEAR FOR NEWER AND RICHER EXPERIENCE.</string>
    <string name="english">English</string>
    <string name="suggestion">Hindi</string>
    <string name="career">Odia</string>
    <string name="medical">Maharastrian</string>
    <string name="food">Gujrati</string>
    <string name="gym">Bangla</string>
    <string name="settings">Asam</string>
    <string name="delete">Chhatishgarh</string>
    <string name="choose_language">Choose language</string>
</resources>